--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Flask App</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
     <h1>Welcome to the Flask Web Interface</h1>
     <form action="/submit" method="post">
-        <input type="text" name="data" placeholder="Enter some data">
-        <button type="submit">Submit</button>
+        <div class="form-group">
+            <label for="data">Enter some data:</label>
+            <input type="text" class="form-control" name="data" id="data" placeholder="Enter some data">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-</body>
-</html>
+{% endblock %}
